Implemented vacuum cleaning + degraded to jdk 1.8