@@ -5,39 +5,41 @@ import edu.purdue.cs.fast.models.*;
 import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.Test;
 
+import java.util.ArrayList;
 import java.util.List;
+import java.util.stream.Collectors;
 
 
 class CkQSTKNNTest {
-    private final List<KNNQuery> queries;
+    private final List<Query> queries;
     private final List<DataObject> objects;
-    private final List<List<Integer>> answers;
+    private final List<Answer> answers;
 
     public CkQSTKNNTest() {
-        this.queries = List.of(
-                new KNNQuery(1, List.of("k1", "k2"), new Point(5.0, 5.0), 3, null, 0, 100),
-                new KNNQuery(2, List.of("k1", "k2"), new Point(7.0, 7.0), 2, null, 0, 100),
-                new KNNQuery(3, List.of("k1"), new Point(8.0, 5.0), 3, null, 0, 100),
-                new KNNQuery(4, List.of("k2", "k3"), new Point(1.0, 7.0), 2, null, 0, 100)
+        this.queries = L.of(
+                new KNNQuery(1, L.of("k1", "k2"), new Point(5.0, 5.0), 3, null, 0, 100),
+                new KNNQuery(2, L.of("k1", "k2"), new Point(7.0, 7.0), 2, null, 0, 100),
+                new KNNQuery(3, L.of("k1"), new Point(8.0, 5.0), 3, null, 0, 100),
+                new KNNQuery(4, L.of("k2", "k3"), new Point(1.0, 7.0), 2, null, 0, 100)
         );
 
         // TODO - Address tie-breaking
-        this.objects = List.of(
-                new DataObject(1, new Point(7.0, 8.0), List.of("k1", "k2"), 1, 100),
-                new DataObject(2, new Point(5.0, 5.0), List.of("k1", "k2"), 2, 100),
-                new DataObject(3, new Point(2.0, 6.0), List.of("k1", "k2"), 3, 100),
-                new DataObject(4, new Point(1.0, 1.0), List.of("k1", "k2"), 4, 100),
-                new DataObject(5, new Point(5.0, 6.0), List.of("k1", "k2"), 5, 100),
-                new DataObject(6, new Point(7.0, 8), List.of("k1", "k2"), 6, 100)
+        this.objects = L.of(
+                new DataObject(1, new Point(7.0, 8.0), L.of("k1", "k2"), 1, 100),
+                new DataObject(2, new Point(5.0, 5.0), L.of("k1", "k2"), 2, 100),
+                new DataObject(3, new Point(2.0, 6.0), L.of("k1", "k2"), 3, 100),
+                new DataObject(4, new Point(1.0, 1.0), L.of("k1", "k2"), 4, 100),
+                new DataObject(5, new Point(5.0, 6.0), L.of("k1", "k2"), 5, 100),
+                new DataObject(6, new Point(7.0, 8), L.of("k1", "k2"), 6, 100)
         );
 
-        this.answers = List.of(
-                List.of(1, 2, 3),
-                List.of(1, 2, 3),
-                List.of(1, 3),
-                List.of(),
-                List.of(1, 2, 3),
-                List.of(2)
+        this.answers = L.of(
+                new Answer(1, 2, 3),
+                new Answer(1, 2, 3),
+                new Answer(1, 3),
+                new Answer(),
+                new Answer(1, 2, 3),
+                new Answer(2)
         );
     }
 
@@ -45,7 +47,7 @@ class CkQSTKNNTest {
     public void testInserts() {
         CkQST testCkQST = new CkQST();
 
-        for (KNNQuery query : this.queries) {
+        for (Query query : this.queries) {
             testCkQST.addContinuousQuery(query);
         }
 
@@ -56,20 +58,25 @@ class CkQSTKNNTest {
     public void testSearch() {
         CkQST testCkQST = new CkQST();
 
-        for (KNNQuery query : this.queries) {
+        for (Query query : this.queries) {
             testCkQST.addContinuousQuery(query);
         }
 
         System.out.println("-----Search Test-----");
         for (int i = 0; i < answers.size(); i++) {
             System.out.println(objects.get(i));
-            List<Integer> fastAns = testCkQST.searchQueries(objects.get(i)).stream().map((Query query) -> query.id).toList();
+            List<Integer> fastAns = testCkQST.searchQueries(objects.get(i)).stream().map((Query query) -> query.id).collect(Collectors.toList());
             System.out.println(fastAns + " | " + answers.get(i).toString());
 
             testCkQST.printIndex();
             System.out.println("------------\n");
 
-            Assertions.assertArrayEquals(fastAns.stream().sorted().toArray(), answers.get(i).toArray());
+            Assertions.assertArrayEquals(fastAns.stream().sorted().toArray(), answers.get(i).answers.toArray());
         }
     }
+
+//    private static ArrayList<KNNQuery> listOf() {
+//        ArrayList<KNNQuery> queries = new ArrayList<>();
+//        return null;
+//    }
 }
